# band-forge

./: .gitignore  AGENTS.md  PUBLISHING.md  README.md  pyproject.toml
contracts/: arrangement-document.schema.json  openapi.yaml
contracts/examples/: minimal-arrangement.json
docs/: 00-product-specification.md  01-system-architecture.md  02-arrangement-domain-model.md  03-generation-and-training.md  04-validation-and-evaluation.md  05-api-and-jobs.md  06-input-and-ux.md  07-security-privacy-rights.md  08-testing-and-observability.md  09-implementation-roadmap.md  10-research-sources.md  11-reference-implementation-profile.md  12-foundation-sdlc.md  13-cycle-demo-gate.md  ARCHITECTURE.md  VERIFICATION.md
docs/decisions/: ADR-001-modular-monolith-and-workers.md  ADR-002-canonical-arrangement-document.md  ADR-003-hybrid-generation-strategy.md  (+5 more)
reports/: acoustic-preview-overlap-fix.md  cycle-10-mvp-playback-demo.md  cycle-4-editor-demo.md  cycle-5-chart-export-demo.md  cycle-6-generator-demo.md  cycle-7-candidate-validation-demo.md  cycle-8-candidate.mid  cycle-8-midi-manifest.json  cycle-8-midi-regeneration-demo.md  cycle-8-regenerated.mid  cycle-9-notation-packet-demo.md  cycle-9-player-packet-manifest.json  cycle-9-score.musicxml  final-mvp-review.md  playback-controls-fix.md  playback-controls-fixed-browser.json
scripts/: run_cycle10_demo.py  run_cycle4_demo.py  run_cycle6_demo.py  run_cycle7_demo.py  run_cycle8_demo.py  run_cycle9_demo.py  run_playback_browser_check.mjs
tasks/: todo.md
tests/: test_workspace.py
web/: editor.css  editor.js  index.html
(+45 files in other folders)
