[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "bandforge"
version = "0.1.0"
description = "Contract-first source workflow for BandForge."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1",
  "jsonschema>=4.23,<5",
  "pydantic>=2.10,<3",
  "sqlalchemy>=2.0,<3",
  "uvicorn[standard]>=0.30,<1",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28,<1",
  "openapi-spec-validator>=0.7,<1",
  "pytest>=8.3,<9",
  "pyyaml>=6,<7",
  "ruff>=0.8,<1",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
